[package]
name = "erc721"
version = "0.1.0"
authors = ["Jun Kimura <junkxdev@gmail.com>"]
edition = "2018"

[dependencies]
hmc = { git = "https://github.com/bluele/hypermint", branch = "develop" }

[dev-dependencies]
hmemu = { git = "https://github.com/bluele/hmemu", branch = "develop" }

[lib]
crate-type = ["staticlib", "lib"]
