[package]
name = "erc721"
version = "0.1.0"
authors = ["Jun Kimura <junkxdev@gmail.com>"]
edition = "2018"

[features]
emulation = []

[dependencies]
hmcdk = { git = "https://github.com/bluele/hypermint", tag = "v0.4.3" }

[dev-dependencies]
hmemu = { git = "https://github.com/bluele/hmemu", tag = "v0.0.3" }

[lib]
crate-type = ["staticlib", "lib"]
